feat: add custom theme and rounded variant

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,3 +33,13 @@ section {
   justify-content: center;
   width: 120px;
 }
+
+.buttons-wrapper {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.buttons-container {
+  padding: 16px;
+  border-radius: 8px;
+}
