fix: remove extra classes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -205,7 +205,7 @@
         </div>
       </section>
     </div>
-    <div class="buttons-container custom-theme mat-app-background">
+    <div class="buttons-container custom-theme">
       <h2>Custom theme</h2>
       <section>
         <div class="example-label">Basic</div>
